--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.1.1"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.1"
 }
 
 compileKotlin {
@@ -36,6 +38,10 @@ compileKotlin {
 
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 task buildZip(type: Zip) {
